# fraud-detection

./: .gitignore  README.md  REPORT.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
data/: download_data.py
data/interim/: merge_data.py
models/: model_config.txt
notebooks/: 01_EDA.ipynb  02_Feature_Engineering.ipynb  03_Training.ipynb  04_Evaluation.ipynb
src/: __init__.py  data.py  evaluate.py  features.py  train.py
src/schemas/: __init__.py  features.py  prediction.py  transaction.py
tests/: conftest.py  test_data.py  test_evaluate.py  test_train.py
