[project]
name = "fraud-detection"
version = "0.1.0"
description = "Credit card fraud detection model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "imbalanced-learn>=0.11.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "kagglehub>=0.2.0",
    "joblib>=1.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "mlflow>=2.10.0",
    "optuna>=3.5.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
